# fast_lio_modular

./: .gitignore  ATTRIBUTION.md  CMakeLists.txt  README.md  package.xml
include/: common_lib.h
include/fast_lio/common/: Common.hpp  Constants.hpp  DataStructures.hpp  GeometryUtils.hpp  MathUtils.hpp  TimeUtils.hpp  Types.hpp
include/fast_lio/config/: Config.hpp  ConfigMigrationBridge.hpp
src/: IMU_Processing.hpp  laserMapping.cpp
src/common/: DataStructures.cpp  GeometryUtils.cpp
test/: test_config.cpp
test/common/: test_constants.cpp  test_data_structures.cpp  test_geometry_utils.cpp  test_math_utils.cpp  test_time_utils.cpp
